--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mskocik/svelecte"
-  }
+  },
+  "homepage": "https://mskocik.github.io/svelecte/"
 }
