--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "svelecte",
+  "module": "dist/svelecte.mjs",
   "svelte": "src/Svelecte/Svelecte.svelte",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "license": "MIT",
   "scripts": {
     "build": "rollup -c",
