--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "type": "git",
     "url": "https://github.com/mskocik/svelecte"
   },
-  "homepage": "https://mskocik.github.io/svelecte/"
+  "homepage": "https://mskocik.github.io/svelecte/",
+  "dependencies": {
+    "svelte-tiny-virtual-list": "^1.1.5"
+  }
 }
