--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
   "name": "svelecte",
   "module": "dist/svelecte.mjs",
-  "svelte": "src/Svelecte/Svelecte.svelte",
+  "svelte": "src/Svelecte.svelte",
   "version": "1.0.4",
   "license": "MIT",
+  "description": "Flexible autocomplete/select component written in Svelte. Massively inspired by Selectize.js. Also usable as custom element (CE)",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv docs",
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^14.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "rollup": "^2.3.4",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "rollup": "^2.45.2",
+    "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^6.0.0",
+    "rollup-plugin-svelte": "^6.1.1",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "sirv-cli": "^1.0.0"
+    "sirv-cli": "^1.0.0",
+    "svelte": "^3.37.0"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/mskocik/svelecte"
   },
-  "homepage": "https://mskocik.github.io/svelecte/",
+  "homepage": "https://mskocik.github.io/svelecte-docs/",
   "keywords": [
     "svelte",
     "autocomplete",
