--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev": "rollup -c -w",
     "prepublishOnly": "npm run build"
   },
+  "dependencies": {
+    "svelte-tiny-virtual-list": "^1.1.6"
+  },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.1",
     "rollup": "^2.45.2",
