--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelecte",
   "module": "dist/svelecte.mjs",
   "svelte": "src/Svelecte.svelte",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "license": "MIT",
   "description": "Flexible autocomplete/select component written in Svelte. Massively inspired by Selectize.js. Also usable as custom element (CE)",
   "scripts": {
@@ -28,7 +28,7 @@
     "type": "git",
     "url": "https://github.com/mskocik/svelecte"
   },
-  "homepage": "https://mskocik.github.io/svelecte-docs/",
+  "homepage": "https://mskocik.github.io/svelecte/",
   "keywords": [
     "svelte",
     "autocomplete",
