--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelecte",
   "module": "dist/svelecte.mjs",
   "svelte": "src/Svelecte.svelte",
-  "version": "3.3.3",
+  "version": "3.3.4",
   "license": "MIT",
   "description": "Flexible autocomplete/select component written in Svelte. Massively inspired by Selectize.js. Also usable as custom element (CE)",
   "scripts": {
@@ -32,6 +32,8 @@
   "keywords": [
     "svelte",
     "autocomplete",
-    "select"
+    "select",
+    "custom-element",
+    "multiselect"
   ]
 }
