--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "svelecte",
   "module": "dist/svelecte.mjs",
-  "main": "dist/svelecte.js",
-  "svelte": "index.js",
+  "svelte": "src/Svelecte.svelte",
   "version": "3.5.5",
   "license": "MIT",
   "description": "Flexible autocomplete/select component written in Svelte. Massively inspired by Selectize.js. Also usable as custom element (CE)",
