--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -26,4 +26,4 @@ jobs:
         days-before-close: 3        
         days-before-pr-close: -1
         exempt-all-assignees: true
-        exempt-issue-labels: documentation,enhancement,bug
+        exempt-issue-labels: documentation,enhancement,bug,feature request
