--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "svelecte",
   "module": "dist/svelecte.mjs",
   "svelte": "src/Svelecte.svelte",
-  "version": "4.0.0-alpha.1",
+  "version": "4.0.0-alpha.6",
   "license": "MIT",
+  "type": "module",
   "description": "Flexible autocomplete/select component written in Svelte. Massively inspired by Selectize.js. Also usable as custom element (CE)",
   "scripts": {
     "build": "rollup -c",
