--- a/package.json
+++ b/package.json
@@ -45,24 +45,26 @@
 		"svelte": "^3.43.0 || ^4.0.0"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"@sveltejs/package": "^2.0.0",
+		"@playwright/test": "^1.41.2",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/adapter-vercel": "^5.1.0",
+		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/package": "^2.2.6",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
 		"@testing-library/jest-dom": "^6.4.2",
 		"@testing-library/svelte": "^4.1.0",
 		"@testing-library/user-event": "^14.5.2",
 		"jsdom": "^24.0.0",
-		"publint": "^0.1.9",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.4.3",
+		"publint": "^0.2.7",
+		"svelte": "^4.2.11",
+		"svelte-check": "^3.6.4",
 		"svelte-dnd-action": "^0.9.38",
 		"svelte-use-form": "^2.10.0",
-		"sveltekit-superforms": "^2.2.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.3.6",
-		"vitest": "^0.32.2",
+		"sveltekit-superforms": "^2.2.1",
+		"tslib": "^2.6.2",
+		"typescript": "^5.3.3",
+		"vite": "^5.1.3",
+		"vitest": "^1.3.0",
 		"zod": "^3.22.4"
 	},
 	"dependencies": {
