--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
 		"@testing-library/jest-dom": "^6.4.2",
 		"@testing-library/svelte": "^4.1.0",
 		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.12",
+		"@vitest/ui": "^1.3.0",
 		"jsdom": "^24.0.0",
 		"publint": "^0.2.7",
 		"svelte": "^4.2.11",
