--- a/package.json
+++ b/package.json
@@ -24,9 +24,8 @@
 		"prepublishOnly": "npm run package",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
-		"test": "npm run test:integration && npm run test:unit",
-		"test:integration": "playwright test",
-		"test:unit": "vitest"
+		"test": "vitest",
+		"testui": "vitest --ui"
 	},
 	"exports": {
 		".": {
@@ -45,7 +44,7 @@
 		"svelte": "^3.43.0 || ^4.0.0"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.41.2",
+		"@shikijs/transformers": "^1.1.6",
 		"@sveltejs/adapter-auto": "^3.1.1",
 		"@sveltejs/adapter-vercel": "^5.1.0",
 		"@sveltejs/kit": "^2.5.0",
@@ -55,18 +54,20 @@
 		"@testing-library/svelte": "^4.1.0",
 		"@testing-library/user-event": "^14.5.2",
 		"@types/jest": "^29.5.12",
-		"@vitest/ui": "^1.3.0",
+		"@vitest/ui": "^1.3.1",
 		"jsdom": "^24.0.0",
+		"mdsvex": "^0.11.0",
 		"publint": "^0.2.7",
+		"shiki": "^1.1.6",
 		"svelte": "^4.2.11",
 		"svelte-check": "^3.6.4",
-		"svelte-dnd-action": "^0.9.38",
+		"svelte-dnd-action": "^0.9.39",
 		"svelte-use-form": "^2.10.0",
-		"sveltekit-superforms": "^2.2.1",
+		"sveltekit-superforms": "^2.5.0",
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
-		"vite": "^5.1.3",
-		"vitest": "^1.3.0",
+		"vite": "^5.1.4",
+		"vitest": "^1.3.1",
 		"zod": "^3.22.4"
 	},
 	"dependencies": {
