--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,6 @@ trim_trailing_whitespace = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
-[*.{js,svelte}]
+[*.{js,svelte, css}]
 indent_style = space
 indent_size = 2
