--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "svelecte",
 	"description": "Flexible autocomplete/select component written in Svelte. Massively inspired by Selectize.js. Also usable as custom element (CE)",
-	"version": "4.0.0-alpha.13",
+	"version": "4.0.0",
 	"type": "module",
 	"license": "MIT",
 	"keywords": [
@@ -67,6 +67,7 @@
 		"tslib": "^2.6.2",
 		"typescript": "^5.3.3",
 		"vite": "^5.1.4",
+		"vite-plugin-node-polyfills": "^0.21.0",
 		"vitest": "^1.3.1",
 		"zod": "^3.22.4"
 	},
