--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
 		"jsdom": "^24.0.0",
 		"mdsvex": "^0.11.0",
 		"publint": "^0.2.7",
+		"rehype-autolink-headings": "^7.1.0",
+		"rehype-slug": "^6.0.0",
 		"shiki": "^1.1.6",
 		"svelte": "^4.2.11",
 		"svelte-check": "^3.6.4",
