--- a/package.json
+++ b/package.json
@@ -42,22 +42,22 @@
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"peerDependencies": {
-		"svelte": "^3.43.0 || ^4.0.0"
+		"svelte": "^5.0.0"
 	},
 	"devDependencies": {
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-terser": "^0.4.4",
-		"@shikijs/transformers": "^1.1.6",
-		"@sveltejs/adapter-auto": "^3.1.1",
-		"@sveltejs/adapter-vercel": "^5.1.0",
-		"@sveltejs/kit": "^2.5.0",
-		"@sveltejs/package": "^2.2.6",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@testing-library/jest-dom": "^6.4.2",
-		"@testing-library/svelte": "^4.1.0",
+		"@shikijs/transformers": "^1.4.0",
+		"@sveltejs/adapter-auto": "^3.2.0",
+		"@sveltejs/adapter-vercel": "^5.3.0",
+		"@sveltejs/kit": "^2.5.7",
+		"@sveltejs/package": "^2.3.1",
+		"@sveltejs/vite-plugin-svelte": "^3.1.0",
+		"@testing-library/jest-dom": "^6.4.5",
+		"@testing-library/svelte": "^5.1.0",
 		"@testing-library/user-event": "^14.5.2",
 		"@types/jest": "^29.5.12",
-		"@vitest/ui": "^1.3.1",
+		"@vitest/ui": "^1.6.0",
 		"jsdom": "^24.0.0",
 		"mdsvex": "^0.11.0",
 		"publint": "^0.2.7",
@@ -65,18 +65,18 @@
 		"rehype-slug": "^6.0.0",
 		"rollup-plugin-css-only": "^4.5.2",
 		"rollup-plugin-svelte": "^7.2.0",
-		"shiki": "^1.1.6",
-		"svelte": "^4.2.11",
-		"svelte-check": "^3.6.4",
-		"svelte-dnd-action": "^0.9.39",
+		"shiki": "^1.4.0",
+		"svelte": "5.0.0-next.123",
+		"svelte-check": "^3.7.1",
+		"svelte-dnd-action": "^0.9.43",
 		"svelte-use-form": "^2.10.0",
-		"sveltekit-superforms": "^2.5.0",
+		"sveltekit-superforms": "^2.13.0",
 		"tslib": "^2.6.2",
-		"typescript": "^5.3.3",
-		"vite": "^5.1.4",
+		"typescript": "^5.4.5",
+		"vite": "^5.2.11",
 		"vite-plugin-node-polyfills": "^0.21.0",
-		"vitest": "^1.3.1",
-		"zod": "^3.22.4"
+		"vitest": "^1.6.0",
+		"zod": "^3.23.6"
 	},
 	"dependencies": {
 		"svelte-tiny-virtual-list": "^2.1.0"
