--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "svelecte",
 	"description": "Flexible autocomplete/select component written in Svelte. Massively inspired by Selectize.js. Also usable as custom element (CE)",
-	"version": "5.0.0",
+	"version": "5.0.1",
 	"type": "module",
 	"license": "MIT",
 	"keywords": [
@@ -14,7 +14,7 @@
 	"homepage": "https://svelecte.vercel.app/",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/mskocik/svelecte"
+		"url": "git+https://github.com/mskocik/svelecte.git"
 	},
 	"scripts": {
 		"dev": "vite dev",
